--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark" />
-  <title>Emotional Toys — Interactive Emotional Companions</title>
+  <title>Emotional Toys - Interactive Intuitive Companions</title>
   <meta name="description" content="Explorations in emotional companionship: research prototypes that invite discovery about self, society, and the meaning of emotions." />
   <link rel="icon" href="assets/toys.ico" sizes="any" />
 
@@ -980,7 +980,6 @@
               <p class="heroNote">A proposal for huggable, animal-inspired companions as gentle mirrors for emotional life.</p>
               <div class="heroButtons">
                 <button class="btn btn-ghost" id="heroLearn">LEARN MORE</button>
-                <a class="btn btn-ghost" href="pages/smtwaa/index.html">SMTWAA</a>
               </div>
             </div>
 
@@ -1179,7 +1178,7 @@
         <div class="wrap">
           <div class="sectionTitle">
             <h2>Origin: SMTWAA Research</h2>
-            <p>Social and Mental Therapy with Artificial Animals — the research proposal behind this exploration.</p>
+            <p>Social and Mental Therapy with Artificial Animals — Understand the novel research proposal behind this exploration.</p>
           </div>
           <div class="originGrid">
             <div class="originCard">
@@ -1198,7 +1197,7 @@
               <p>Read the SMTWAA proposal and design rationale.</p>
               <div class="originActions">
                 <a class="btn btn-primary btn-wide" href="pages/smtwaa/SMTWAA-deck.pdf" target="_blank" rel="noreferrer">VIEW DECK (PDF)</a>
-                <a class="btn btn-ghost btn-wide" href="pages/smtwaa/index.html">READ SMTWAA PAGE</a>
+                <a class="btn btn-ghost btn-wide" href="https://cartheur.com/pages/smtwaa/" target="_blank" rel="noreferrer">READ SMTWAA PAGE</a>
               </div>
             </div>
           </div>
@@ -1223,7 +1222,7 @@
             <div class="cardBody">
               <h3 class="cardName">dot</h3>
               <p class="cardTag">Prototype A — desk-scale presence focused on attention cues and gentle reflection.</p>
-              <span class="goalNote"><span class="goalDot"></span>Goal: attention cues</span>
+              <span class="goalNote"><span class="goalDot"></span>Goal: Attention cues</span>
               <div class="cardActions">
                 <button class="btn btn-primary btn-wide" data-open="dot">READ NOTES</button>
               </div>
@@ -1239,7 +1238,7 @@
             <div class="cardBody">
               <h3 class="cardName">davie</h3>
               <p class="cardTag">Prototype B — huggable format exploring trust signals and nonverbal comfort.</p>
-              <span class="goalNote"><span class="goalDot"></span>Goal: comfort &amp; trust</span>
+              <span class="goalNote"><span class="goalDot"></span>Goal: Comfort &amp; trust</span>
               <div class="cardActions">
                 <button class="btn btn-primary btn-wide" data-open="davie">READ NOTES</button>
               </div>
@@ -1255,7 +1254,7 @@
             <div class="cardBody">
               <h3 class="cardName">letty</h3>
               <p class="cardTag">Prototype C — mobile study focused on routines, prompts, and long-life resilience.</p>
-              <span class="goalNote"><span class="goalDot"></span>Goal: routine &amp; movement</span>
+              <span class="goalNote"><span class="goalDot"></span>Goal: Routine &amp; movement</span>
               <div class="cardActions">
                 <button class="btn btn-primary btn-wide" data-open="letty">READ NOTES</button>
               </div>
