--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
   <!-- BUILD: v4 unique-svg-ids + visible-theming -->
   <header>
     <div class="wrap topbar">
-      <a class="brand" href="index.html" aria-label="Emotional Toys Home">
+      <a class="brand" href="/" aria-label="Emotional Toys Home">
         <div class="mark" aria-hidden="true"></div>
         <span>emotional toys</span>
       </a>
@@ -946,7 +946,7 @@
         <a href="#about">about</a>
         <a href="#origin">origin</a>
         <a href="#prototypes">prototypes</a>
-        <a href="pages/smtwaa/index.html">smtwaa</a>
+        <a href="https://cartheur.com/pages/smtwaa/" target="_blank" rel="noreferrer">smtwaa</a>
         <a href="#contact">contact</a>
       </nav>
 
@@ -1342,7 +1342,7 @@
           <a class="btn btn-ghost" href="#about">about</a>
           <a class="btn btn-ghost" href="#origin">origin</a>
           <a class="btn btn-ghost" href="#prototypes">prototypes</a>
-          <a class="btn btn-ghost" href="pages/smtwaa/index.html">smtwaa</a>
+          <a class="btn btn-ghost" href="https://cartheur.com/pages/smtwaa/" target="_blank" rel="noreferrer">smtwaa</a>
           <a class="btn btn-ghost" href="#contact">contact</a>
           <button class="btn btn-primary" id="menuBuy">GET UPDATES</button>
         </div>
