--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
   <meta name="color-scheme" content="dark" />
   <title>Emotional Toys - Interactive Intuitive Companions</title>
   <meta name="description" content="Explorations in emotional companionship: research prototypes that invite discovery about self, society, and the meaning of emotions." />
+  <link rel="canonical" href="https://emotional.toys/" />
+  <meta property="og:title" content="Emotional Toys - Interactive Intuitive Companions" />
+  <meta property="og:description" content="Explorations in emotional companionship: research prototypes that invite discovery about self, society, and the meaning of emotions." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://emotional.toys/" />
+  <meta property="og:image" content="https://emotional.toys/assets/toys.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Emotional Toys - Interactive Intuitive Companions" />
+  <meta name="twitter:description" content="Explorations in emotional companionship: research prototypes that invite discovery about self, society, and the meaning of emotions." />
+  <meta name="twitter:image" content="https://emotional.toys/assets/toys.png" />
   <link rel="icon" href="assets/toys.ico" sizes="any" />
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Emotional Toys",
+    "url": "https://emotional.toys/",
+    "description": "Explorations in emotional companionship: research prototypes that invite discovery about self, society, and the meaning of emotions.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "cartheur",
+      "url": "https://cartheur.com/"
+    }
+  }
+  </script>
 
   
 <style>
@@ -944,9 +968,9 @@
 
       <nav aria-label="Primary navigation">
         <a href="#about">about</a>
-        <a href="#origin">origin</a>
+        <a href="#origin">Origins</a>
         <a href="#prototypes">prototypes</a>
-        <a href="https://cartheur.com/pages/smtwaa/" target="_blank" rel="noreferrer">smtwaa</a>
+        <a href="#origin">smtwaa</a>
         <a href="#contact">contact</a>
       </nav>
 
@@ -1177,7 +1201,7 @@
       <section id="origin">
         <div class="wrap">
           <div class="sectionTitle">
-            <h2>Origin: SMTWAA Research</h2>
+            <h2>Origins: SMTWAA Research &amp; Development</h2>
             <p>Social and Mental Therapy with Artificial Animals — Understand the novel research proposal behind this exploration.</p>
           </div>
           <div class="originGrid">
@@ -1340,9 +1364,9 @@
       <div class="modalBody" style="grid-template-columns: 1fr;">
         <div style="display:grid; gap:10px;">
           <a class="btn btn-ghost" href="#about">about</a>
-          <a class="btn btn-ghost" href="#origin">origin</a>
+          <a class="btn btn-ghost" href="#origin">Origins</a>
           <a class="btn btn-ghost" href="#prototypes">prototypes</a>
-          <a class="btn btn-ghost" href="https://cartheur.com/pages/smtwaa/" target="_blank" rel="noreferrer">smtwaa</a>
+          <a class="btn btn-ghost" href="#origin">smtwaa</a>
           <a class="btn btn-ghost" href="#contact">contact</a>
           <button class="btn btn-primary" id="menuBuy">GET UPDATES</button>
         </div>
