--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
       background: url("assets/toys.png") center / contain no-repeat;
       box-shadow: none;
       position: relative;
+      animation: heartBeat 2.4s ease-in-out infinite;
+      transform-origin: center;
     }
     .brand .mark:before{
       content: none;
@@ -151,6 +153,16 @@
       content: none;
     }
     .brand span{ font-size: 18px; }
+    @keyframes heartBeat{
+      0%, 100%{ transform: scale(1); }
+      12%{ transform: scale(1.08); }
+      24%{ transform: scale(0.98); }
+      36%{ transform: scale(1.06); }
+      48%{ transform: scale(1); }
+    }
+    @media (prefers-reduced-motion: reduce){
+      .brand .mark{ animation: none; }
+    }
     nav{
       display: flex;
       gap: 18px;
