--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
 
       <nav aria-label="Primary navigation">
         <a href="#about">about</a>
-        <a href="#origin">Origins</a>
+        <a href="#origin">origins</a>
         <a href="#prototypes">prototypes</a>
         <a href="#origin">smtwaa</a>
         <a href="#contact">contact</a>
