--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
       color: var(--ink);
       font-size: 15.5px;
       line-height: 1.65;
+      text-align: justify;
     }
     .metricDiagram{
       margin: 18px 0 20px;
@@ -1205,7 +1206,7 @@
             </div>
             <div class="metricDetail" id="metricDetail">Explore the diagram: Hover or tap a label to reveal its role in the KSEM loop.</div>
           </div>
-          <p class="metricText">KSEM is the primary lens, with the Autonomy–Will Concordance Metric (AWCM) as its shade. We ask whether interactions respect autonomy (Kant) while easing the pressures of will and suffering (Schopenhauer). It measures not efficiency but humane resonance—clarity of intent, dignity preserved, and reduction of needless distress.</p>
+          <p class="metricText">KSEM is the primary lens, with the Autonomy–Will Concordance Metric (AWCM) as its shade. It evaluates whether an interaction preserves autonomy and dignity while also easing the pressures of will, distress, and compulsion—balancing self‑direction with relief. The focus is not performance but humane resonance: clear intent, ethical boundaries, and a measurable reduction of needless suffering over time.</p>
         </div>
       </div>
     </section>
