Add paper reference

--- a/index.html
+++ b/index.html
@@ -543,6 +543,17 @@
       font-size: 13.5px;
       line-height: 1.5;
     }
+    .metricNotice{
+      margin-top: 10px;
+      padding: 10px 12px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,.12);
+      background: rgba(12,15,22,.65);
+      color: var(--muted);
+      font-size: 13px;
+      line-height: 1.5;
+      text-align: center;
+    }
     .metricLegend{
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1208,6 +1219,7 @@
           </div>
           <p class="metricText">KSEM is the primary lens, with the Autonomy–Will Concordance Metric (AWCM) as its shade. It evaluates whether an interaction preserves autonomy and dignity while also easing the pressures of will, distress, and compulsion—balancing self‑direction with relief. The focus is not performance but humane resonance: clear intent, ethical boundaries, and a measurable reduction of needless suffering over time.</p>
         </div>
+        <div class="metricNotice">A formal paper is being prepared. Preview it at: <a href="https://github.com/pub-n-dub/KSEM" target="_blank" rel="noreferrer">The Kant–Schopenhauer Emotive Metric</a></div>
       </div>
     </section>
 
