--- a/index.html
+++ b/index.html
@@ -292,7 +292,11 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 18px;
       margin-top: 14px;
-      transform: translate(-118px, 20px);
+      width: min(100%, 420px);
+      justify-self: end;
+      align-self: end;
+      margin-inline-start: auto;
+      margin-block-end: 20px;
     }
 
     .toyBadge{
@@ -831,7 +835,13 @@
     /* Responsive */
     @media (max-width: 960px){
       .heroGrid{ grid-template-columns: 1fr; }
-      .toysRow{ grid-template-columns: repeat(3, 1fr); }
+      .toysRow{
+        grid-template-columns: repeat(3, 1fr);
+        width: min(100%, 520px);
+        justify-self: center;
+        margin-inline: auto;
+        margin-block-end: 0;
+      }
       .featuresGrid{ grid-template-columns: repeat(2, 1fr); }
       .feature:nth-child(2){ border-right: 0; }
       .feature:nth-child(1), .feature:nth-child(2){ border-bottom: 1px solid rgba(20,24,32,.06); }
@@ -843,7 +853,10 @@
     @media (max-width: 760px){
       nav{ display: none; }
       .hamburger{ display: inline-flex; }
-      .toysRow{ grid-template-columns: 1fr; }
+      .toysRow{
+        grid-template-columns: 1fr;
+        width: min(100%, 320px);
+      }
       .feature{ border-right: 0; }
       .featuresGrid{ grid-template-columns: 1fr; }
       .feature{ border-bottom: 1px solid rgba(20,24,32,.06); }
