--- a/index.html
+++ b/index.html
@@ -292,11 +292,9 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 18px;
       margin-top: 14px;
-      width: min(100%, 420px);
-      justify-self: end;
-      align-self: end;
-      margin-inline-start: auto;
-      margin-block-end: 20px;
+      position: relative;
+      left: clamp(-118px, -10vw, -44px);
+      top: 20px;
     }
 
     .toyBadge{
@@ -837,10 +835,8 @@
       .heroGrid{ grid-template-columns: 1fr; }
       .toysRow{
         grid-template-columns: repeat(3, 1fr);
-        width: min(100%, 520px);
-        justify-self: center;
-        margin-inline: auto;
-        margin-block-end: 0;
+        left: 0;
+        top: 0;
       }
       .featuresGrid{ grid-template-columns: repeat(2, 1fr); }
       .feature:nth-child(2){ border-right: 0; }
@@ -855,7 +851,8 @@
       .hamburger{ display: inline-flex; }
       .toysRow{
         grid-template-columns: 1fr;
-        width: min(100%, 320px);
+        left: 0;
+        top: 0;
       }
       .feature{ border-right: 0; }
       .featuresGrid{ grid-template-columns: 1fr; }
