Add opaqueness in mobile menu

--- a/index.html
+++ b/index.html
@@ -784,6 +784,13 @@
       box-shadow: 0 30px 90px rgba(0,0,0,.30);
       overflow: hidden;
     }
+    #menuBackdrop{
+      background: rgba(7,8,12,.78);
+    }
+    #menuBackdrop .modal{
+      background: rgba(12,15,22,.94);
+      border-color: rgba(255,255,255,.16);
+    }
     .modal.modal-companion{
       background:
         linear-gradient(180deg, rgba(255,255,255,.50), rgba(255,255,255,.36)),
