Make mobile menu item lowercase

--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,7 @@
       <div class="modalBody" style="grid-template-columns: 1fr;">
         <div style="display:grid; gap:10px;">
           <a class="btn btn-ghost" href="#about">about</a>
-          <a class="btn btn-ghost" href="#origin">Origins</a>
+          <a class="btn btn-ghost" href="#origin">origins</a>
           <a class="btn btn-ghost" href="#prototypes">prototypes</a>
           <a class="btn btn-ghost" href="#origin">smtwaa</a>
           <a class="btn btn-ghost" href="#contact">contact</a>
